[package]
name = "futhark-build"
version = "0.1.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
publish = false
description = "A tool for compiling Futhark code so it can be embedded into your crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
bindgen = "0.55.1"
pkg-config = "0.3.18"
